# chimerax-origami

./: .gitignore  CONNECTIONS.md  README.md  VALIDATION.md  pyproject.toml
.github/workflows/: tests.yml
examples/: assembly_msm_demo.py  design_workflow.cxc  evo2_local_run.py  generate_demo.py  oxdna_validation.py  recursive_improvement_demo.py  scorer_validation_demo.py  shape_predict_demo.py  thesis_validation_demo.py  yield_validation_demo.py
examples/data/: README.md  demo_assembly.npz  demo_design.json  krasnogor_measured.csv
examples/data/krasnogor_variants/: BEAR.sc  DEER.sc  GOAT.sc  LAMB.sc  LION.sc  MOLE.sc
md/: diffusion_modal.py  evo2_modal.py  gnn_shape_modal.py  oxdna_modal.py
src/: __init__.py  assembly.py  cmd.py  contactmap.py  envelope.py  evolve.py  generate.py  mcp_server.py  optimize.py  report.py  score.py  shape.py  viz.py
tests/: conftest.py  test_assembly.py  test_assembly_validation.py  test_cadnano_import.py  test_douglas_corpus.py  test_envelope_validation.py  test_evo2_ablation.py  test_evolve.py  test_evolve_mutator.py  test_generate.py  test_golden_cadnano.py  test_offtarget.py  test_oxdna_crossvalidation.py  test_scorer_validation.py  test_shape.py  test_yield_validation.py
